--- a/videos.html
+++ b/videos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="es"><head>
+<meta charset=utf-8"/>
 <link rel="stylesheet" href="css/Estilo.css">
 </head>
 <body bgcolor="orange">
@@ -24,6 +24,6 @@
 <iframe width="600" height="400" src="https://www.youtube.com/embed/N-Wwxi-LR_o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div class="textoblue"><p>Descenso en bicicleta:</p></div>
 <iframe width="600" height="400" src="https://www.youtube.com/embed/b5nSRvvxE-I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<div class="textoblue"><p>Consejos y técnicas en bicicleta:</p></div>
+<div class="textoblue"><p>Consejos y tÃ©cnicas en bicicleta:</p></div>
 <iframe width="300" height="250" src="https://www.youtube.com/embed/-Pac4dXPM7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="300" height="250" src="https://www.youtube.com/embed/8zeVfXXqyzU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
